# NeuralNetworkFramework

./: .gitignore  CMakeLists.txt  README.md
apps/: test_medical.cpp  test_mnist.cpp  test_mnist_CNN.cpp  xor_main.cpp
data/: medical_data.csv
include/: ActivationLayer.hpp  Conv2DLayer.hpp  DenseLayer.hpp  FlattenLayer.hpp  Layer.hpp  Layer4D.hpp  Loss.hpp  MaxPool2D.hpp  Optimizer.hpp  Tensor.hpp  Tensor4D.hpp  Utils.hpp
src/: ActivationLayer.cpp  Conv2DLayer.cpp  DenseLayer.cpp  FlattenLayer.cpp  Layer.cpp  Loss.cpp  MaxPool2D.cpp  Optimizer.cpp  Tensor.cpp  Utils.cpp
